--- a/.github/workflows/my_configuration.yaml
+++ b/.github/workflows/my_configuration.yaml
@@ -15,4 +15,4 @@ jobs:
           python -m pip install pytest numpy
       - name: Test with pytest
         run:
-          pytest -sv hands_on/pyanno_voting
+          pytest -sv 
